Fix issue with iframes overflowing page content
This adds a max-width for iframes in product descriptions and custom
pages so the content doesn’t overflow

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -266,6 +266,9 @@ header
   margin: 0 #{"{% if theme.sidebar_position == 'right' %} auto {% endif %}"}
   max-width: 700px
   width: 100%
+  
+  iframe
+    max-width: 100%
 
 .success_message
   margin-top: 20px
