--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -97,6 +97,9 @@
 
     a
       font-weight: 600
+      
+    iframe
+      max-width: 100%
 
   form
     margin-bottom: 40px
